@@ -22,7 +22,7 @@ concurrent.jar=backport-util-concurrent-2.2.jar
 # Names of distributions
 #
 testng.basename=testng
-testng.version=5.7
+testng.version=5.7.1beta
 jdk14.testng.jar=${testng.basename}-${testng.version}-jdk14.jar
 jdk15.testng.jar=${testng.basename}-${testng.version}-jdk15.jar
 other.jars.dir=other-jars
